added getrecipebyid mediatr

--- a/Recipes.Application/Recipes.Application.csproj
+++ b/Recipes.Application/Recipes.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Recipes.Domain\Recipes.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Mapper\Maps\" />
+  </ItemGroup>
+
 </Project>
