--- a/Recipes.Api/appsettings.json
+++ b/Recipes.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Url": {
+    "AllowedOriginUrls" : "http://localhost:3000"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Recipes;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
