--- a/Recipes.Application/Recipes.Application.csproj
+++ b/Recipes.Application/Recipes.Application.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\Mapper\Maps\**" />
+    <EmbeddedResource Remove="Common\Mapper\Maps\**" />
+    <None Remove="Common\Mapper\Maps\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
@@ -17,10 +25,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Recipes.Domain\Recipes.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\Mapper\Maps\" />
   </ItemGroup>
 
 </Project>
